# CynCo

./: .gitattributes  .gitignore  AUDIT-LOG-README.md  CREDITS.md  DEAD_CODE_AUDIT.md  LICENSE  README.md  package-lock.json  package.json  run-tests.test.ts  vitest.config.ts
civkings/: ai.py
docs/: BENCHMARKS.md  (+16 more)
tui/: pyproject.toml
tui/localcode_tui/: __init__.py  app.py  bridge.py  config.py  job_object.py  protocol.py  settings_schema.py
tui/localcode_tui/screens/: __init__.py  guided.py  model_picker.py  profile_wizard.py  profile_wizard_presets.py  project_picker.py  project_wizard.py  settings.py  setup_wizard.py  vibe_loop.py  workspace.py
tui/localcode_tui/styles/: guided.tcss  theme.tcss  workspace.tcss
tui/localcode_tui/widgets/: __init__.py  approval.py  ask_dialog.py  chat_panel.py  completion_screen.py  confidence_bar.py  context_bar.py  context_sidebar.py  diff_view.py  escalation_dialog.py  file_preview.py  file_tree.py  progress.py  project_entry.py  tool_activity.py  worker_animation.py
tui/tests/: except_pass_baseline.json  test_abort_guard.py  test_app.py  test_ask_dialog.py  test_bridge.py  test_config.py  test_diff_view.py  test_except_pass_ratchet.py  test_job_object.py  test_profile_wizard.py  test_profile_wizard_events.py  test_project_picker.py  test_project_wizard.py  test_protocol.py  test_protocol_new_events.py  test_protocol_phase6.py  test_screens.py  test_settings_schema.py  test_settings_screen.py  test_sidebar.py  test_subagent_sidebar.py  test_vibe_copy.py  test_vibe_integration.py  test_widgets.py  test_workspace.py
(+847 files in other folders)
